# ansible-uv

./: .ansible-lint  .gitignore  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ansible-lint.yml  github-action-lint.yml  uv-setup.yml
defaults/: main.yml
handlers/: main.yml
meta/: argument_specs.yml  main.yml  requirements.yml
molecule/apply/: converge.yml  inventory.yml  molecule.yml
molecule/default/: converge.yml  create-fail.yml  create.yml  molecule.yml
tasks/: completion.yml  main.yml
tests/: test.yml
vars/: main.yml
