[project]
name = "ansible-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-core>=2.19.3",
    "ansible-lint>=25.9.2",
    "molecule>=25.12.0",
    "molecule-plugins[docker]>=25.8.12",
]
[dependency-groups]
dev = ["ansible-lint>=25.9.2"]
